[gd_scene load_steps=6 format=3 uid="uid://bucrytoh51hki"]

[ext_resource type="Script" path="res://src/weapons/scripts/weapon.gd" id="1_rjxuq"]
[ext_resource type="Resource" uid="uid://b2s4xjbvhv7xw" path="res://src/weapons/wand/wand.tres" id="2_yn1y4"]
[ext_resource type="ArrayMesh" uid="uid://b16qhujjtd6c7" path="res://src/weapons/wand/wand.res" id="3_dv67w"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_p4mal"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kh4f7"]
noise = SubResource("FastNoiseLite_p4mal")

[node name="Weapon" type="Node3D"]
transform = Transform3D(0.00973179, -0.0189414, 0.00130558, 0, 0.056752, 0.00823359, -0.0023005, -0.0801276, 0.00552299, 0.23, -0.239, -0.334)
script = ExtResource("1_rjxuq")
sway_noise = SubResource("NoiseTexture2D_kh4f7")
WEAPON_TYPE = ExtResource("2_yn1y4")

[node name="WeaponMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.468, -4.58634e-09, -2.78837e-14, 3.72592e-09, 1.807, 1.10118e-05, -7.35671e-17, -1.52595e-05, 1.304, 1.31149, 0.821298, 0.335676)
layers = 2
cast_shadow = 0
mesh = ExtResource("3_dv67w")

[node name="WeaponShadow" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
visible = false
cast_shadow = 3

[node name="Tip" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 3.8147e-06, -2.98023e-08, -1.02445e-08, 1, 0, 8.9407e-08, 2.6226e-06, 1, 1.33023, 3.54729, 0.256496)

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
